# MATLAB-Dataflow

./: .directory  .gitignore  .travis.yml  CMakeLists.txt  FastSRC  LICENSE  MyFFT  README.m  README.md  RunDurationFFTBlocks_0.txt  RunDurationFFTBlocks_1.txt  SlowSRC  Walkthrough.m  builder.m  import_datapassing_timings.m  process_header.py  setbuildargsBoost.m  winmake.mk
Dataflow/: Dataflow.sln
Dataflow/Dataflow/: Dataflow.vcxproj
benchmarking/: block_transfer_eval.m  eval_timings.m
codegen/exe/RX/: CheckCRC.cpp  CheckCRC.h  GenCRC.cpp  GenCRC.h  RX_initialize.cpp  RX_initialize.h  RX_rtw.mk  RX_terminate.cpp  RX_terminate.h  RX_types.h  buildInfo.mat  codeInfo.mat  fileManager.cpp  fileManager.h  fprintf.cpp  fprintf.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
codegen/exe/RX/html/: CheckCRC97_mcode.html  CheckCRC97_watch.html  (+6 more)
cpp/: .gdb_history  blocks.h~  config.doc  flowMP.h  graph.h  mainPD.cpp  mainPD.cpp~  testFlowMP.cpp  utils.h
doc/: tests.m
graphs/: simple_with_channel.dot
include/: blocks.h  blocks_bm.h  blocks_gen.h  flowMP.h  graph.h  readerwriterqueue.h  utils.h
mfiles/: AddNoise.m  CICFilterDelayConjABS.m  CheckCRC.m  DumpSignal.m  FFTSignal.m  GenCRC.m  GenSignal.m  Graph.m  GraphGenerator.m  ModSignalDump.m  testGraphGenerator.m
src/: .Makefile.swp  Makefile  MakefileOLD  benchmark.cpp  flowMP.cpp  graph.cpp  mainPD.cpp  mainPD_FastSRC_gen.cpp  mainPD_MyFFT_gen.cpp  mainPD_RX_gen.cpp  mainPD_SlowSRC_gen.cpp  mainPD_bm.cpp  testExec  testFlowMP.cpp  test_bmExec
test/: testFlowMP.cpp
unused/: CICFilterDelayConjABS.m
(+5 files in other folders)
